syntax = "proto3";

package kv;

service Sync {
    rpc Identify (IdentifyMessage) returns (IdentifyMessage);
    rpc Sync (stream SyncMessage) returns (stream SyncMessage);
}

message IdentifyMessage {
    int64 start_time = 1;
}

enum OperationType {
    UPDATE = 0;
    DELETE = 1;
}
enum SyncType {
    SYN = 0;
    ACK = 1;
}

message SyncMessage {
    string key = 1;
    bytes value = 2;
    int64 timestamp = 3;

    OperationType operation_type = 4;
    SyncType sync_type = 5;

    uint64 coverage = 6;
}
