syntax = "proto3";

package pubsub;

service PubSubService {
    rpc Subscribe (SubscribeRequest) returns (stream FetchResponse) {}
    rpc Fetch (FetchRequest) returns (FetchResponse) {}
    rpc Publish (PublishRequest) returns (Empty) {}
    rpc Sync (stream SyncMessage) returns (stream SyncMessage) {}
}

message SubscribeRequest {

}

message FetchRequest {
    string key = 1;
    int32 timestamp = 2;
}

message FetchResponse {
    string value = 1;
    int32 timestamp = 2;
}

message PublishRequest {
    string key = 1;
    int32 timestamp = 2;
}

message SyncMessage {

}

message Empty {}